worked on jupyter notebooks, fixed fhirabstractresource.py to post transactions

--- a/makePatient.ipynb
+++ b/makePatient.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -460,7 +467,7 @@
     "* `of_many` = choice of data types (pick one), with prefix indicated, e.g, `deceasedBoolean` or `deceasedDateTime`\n",
     "* `not_optional` = required, e.g., cardinality of `1..*`\n",
     "\n",
-    "How many of these patient properties are required?"
+    "How many of these `patient` properties are required?"
    ]
   },
   {
@@ -561,7 +568,7 @@
    "metadata": {},
    "source": [
     "Those 12 properties should be captured in a `list`.\n",
-    "<p>\n",
+    "\n",
     "Which, if any, of the patient properties are `of_many`?"
    ]
   },
@@ -680,9 +687,9 @@
    "metadata": {},
    "source": [
     "### Add a name to Patient\n",
-    "<p>\n",
+    "\n",
     "We see from `patient.elementsProperties()` that `name` has a type of `<class 'fhirclient.models.humanname.HumanName'>`\n",
-    "<p>\n",
+    "\n",
     "We'll create a `HumanName` object to hold this, and find out the properties it has."
    ]
   },
@@ -887,7 +894,7 @@
       "text/plain": [
        "{'app_id': 'my_web_app',\n",
        " 'app_secret': None,\n",
-       " 'server': <server.FHIRServer at 0x109206048>,\n",
+       " 'server': <server.FHIRServer at 0x1100100b8>,\n",
        " 'scope': 'user/*.* patient/*.read openid profile',\n",
        " 'redirect': None,\n",
        " 'launch_token': None,\n",
@@ -940,7 +947,7 @@
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  __init__(self, settings=None, state=None, save_func=<function FHIRClient.<lambda> at 0x109204048>)\n",
+      " |  __init__(self, settings=None, state=None, save_func=<function FHIRClient.<lambda> at 0x11000d378>)\n",
       " |      Initialize self.  See help(type(self)) for accurate signature.\n",
       " |  \n",
       " |  from_state(self, state)\n",
@@ -1085,10 +1092,10 @@
      "text": [
       "{\n",
       "    \"resourceType\": \"Patient\",\n",
-      "    \"id\": \"4406\",\n",
+      "    \"id\": \"4408\",\n",
       "    \"meta\": {\n",
       "        \"versionId\": \"1\",\n",
-      "        \"lastUpdated\": \"2019-01-22T03:31:06.498+00:00\"\n",
+      "        \"lastUpdated\": \"2019-01-23T03:59:18.751+00:00\"\n",
       "    },\n",
       "    \"text\": {\n",
       "        \"status\": \"generated\",\n",
@@ -1140,7 +1147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Content-Encoding': 'gzip', 'Content-Location': 'http://fhirtest.b12x.org/r3/Patient/4406/_history/1', 'Content-Type': 'application/fhir+json;charset=UTF-8', 'Date': 'Tue, 22 Jan 2019 03:31:06 GMT', 'ETag': 'W/\"1\"', 'Last-Modified': 'Tue, 22 Jan 2019 03:31:06 GMT', 'Location': 'http://fhirtest.b12x.org/r3/Patient/4406/_history/1', 'Server': 'Apache-Coyote/1.1', 'X-FHIR-Request-Validation': '{\"resourceType\":\"OperationOutcome\",\"text\":{\"status\":\"generated\",\"div\":\"<div xmlns=\\\\\"http://www.w3.org/1999/xhtml\\\\\"><h1>Operation Outcome</h1><table border=\\\\\"0\\\\\"><tr><td style=\\\\\"font-weight: bold;\\\\\"...', 'X-Powered-By': 'HAPI FHIR 3.6.0 REST Server (FHIR Server; FHIR 3.0.1/DSTU3)', 'transfer-encoding': 'chunked', 'Connection': 'keep-alive'}\n"
+      "{'Content-Encoding': 'gzip', 'Content-Location': 'http://fhirtest.b12x.org/r3/Patient/4408/_history/1', 'Content-Type': 'application/fhir+json;charset=UTF-8', 'Date': 'Wed, 23 Jan 2019 03:59:18 GMT', 'ETag': 'W/\"1\"', 'Last-Modified': 'Wed, 23 Jan 2019 03:59:18 GMT', 'Location': 'http://fhirtest.b12x.org/r3/Patient/4408/_history/1', 'Server': 'Apache-Coyote/1.1', 'X-FHIR-Request-Validation': '{\"resourceType\":\"OperationOutcome\",\"text\":{\"status\":\"generated\",\"div\":\"<div xmlns=\\\\\"http://www.w3.org/1999/xhtml\\\\\"><h1>Operation Outcome</h1><table border=\\\\\"0\\\\\"><tr><td style=\\\\\"font-weight: bold;\\\\\"...', 'X-Powered-By': 'HAPI FHIR 3.6.0 REST Server (FHIR Server; FHIR 3.0.1/DSTU3)', 'transfer-encoding': 'chunked', 'Connection': 'keep-alive'}\n"
      ]
     }
    ],
@@ -1165,12 +1172,12 @@
      "output_type": "stream",
      "text": [
       "Content-Encoding: gzip\n",
-      "Content-Location: http://fhirtest.b12x.org/r3/Patient/4406/_history/1\n",
+      "Content-Location: http://fhirtest.b12x.org/r3/Patient/4408/_history/1\n",
       "Content-Type: application/fhir+json;charset=UTF-8\n",
-      "Date: Tue, 22 Jan 2019 03:31:06 GMT\n",
+      "Date: Wed, 23 Jan 2019 03:59:18 GMT\n",
       "ETag: W/\"1\"\n",
-      "Last-Modified: Tue, 22 Jan 2019 03:31:06 GMT\n",
-      "Location: http://fhirtest.b12x.org/r3/Patient/4406/_history/1\n",
+      "Last-Modified: Wed, 23 Jan 2019 03:59:18 GMT\n",
+      "Location: http://fhirtest.b12x.org/r3/Patient/4408/_history/1\n",
       "Server: Apache-Coyote/1.1\n",
       "X-FHIR-Request-Validation: {\"resourceType\":\"OperationOutcome\",\"text\":{\"status\":\"generated\",\"div\":\"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\"...\n",
       "X-Powered-By: HAPI FHIR 3.6.0 REST Server (FHIR Server; FHIR 3.0.1/DSTU3)\n",
@@ -1202,7 +1209,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://fhirtest.b12x.org/r3/Patient/4406/_history/1\n"
+      "http://fhirtest.b12x.org/r3/Patient/4408/_history/1\n"
      ]
     }
    ],
@@ -1241,7 +1248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
