--- a/makeSpecimen.ipynb
+++ b/makeSpecimen.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will build a Specimen resource using the [Patient](http://fhirtest.b12x.org/baseDstu3/Patient/2609) we created and uploaded in the [makePatient](makePatient.ipynb) notebook. We'll include that the specimen was from a buccal swab.\n",
+    "### Building a Specimen Resource\n",
+    "\n",
+    "We will build a Specimen resource using the [Patient](http://fhirtest.b12x.org/baseDstu3/Patient/4408) we created and uploaded in the [makePatient](makePatient.ipynb) notebook. We'll include that the specimen was from a buccal swab.\n",
     "\n",
     "import packages we need..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +30,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a Specimen object and take a look at its `.elementProperties()`. See the [makePatient](makePatient.ipynb) notebook for explanation of this method."
+    "Create a Specimen object and take a look at its' `.elementProperties()`. See the [makePatient.ipynb](makePatient.ipynb) notebook for explanation of this method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -73,12 +75,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which, if any, are required? We'll look at the `not_optional` boolean which is in the last position of the tuple."
+    "Which, if any, are required? We'll look at the `not_optional` boolean which is in the last position of the tuple.\n",
+    "\n",
+    "Since we'll do this again for other objects, we'll create a little function to determine this."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def whatsRequired(fhirObject):\n",
+    "    required = False\n",
+    "    for eproperty in fhirObject.elementProperties():\n",
+    "        if eproperty[5] == True:\n",
+    "            print(eproperty)\n",
+    "            required = True\n",
+    "    if not required:\n",
+    "        print(\"Nothing is required\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,26 +110,22 @@
     }
    ],
    "source": [
-    "for eproperty in mySpecimen.elementProperties():\n",
-    "    if eproperty[5] == True:\n",
-    "        print(eproperty)"
+    "whatsRequired(mySpecimen)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`subject` is required.\n",
-    "<p>\n",
-    "We'll use the id of the Patient that was posted to the same server.\n",
-    "We see from `.elementProperties()` that myspecimen.subject is a type of `fhirclient.models.fhirreference.FHIRReference`, so we'll build this.\n",
-    "</p>\n",
-    "<p>First, create the `FHIRReference` object.</p>"
+    "Only `subject` is required. Our Subject will be the Patient we created in the previous notebook. We'll use the id of the Patient that was posted to the same server.\n",
+    "We see from `.elementProperties()` that `mySpecimen.subject` is a type of `fhirclient.models.fhirreference.FHIRReference`, so we'll build this.\n",
+    "\n",
+    "First, create the `FHIRReference` object.</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,12 +150,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "None of these are required, but we'll use the `reference` and point to the Patient we created."
+    "Which of these is required?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nothing is required\n"
+     ]
+    }
+   ],
+   "source": [
+    "whatsRequired(mySubject)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "None of the elements inside of `subject` are required. We'll use the `reference` and point to the Patient we created, and then take a look to see how `mySubject` looks so far."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +188,7 @@
      "text": [
       "{\n",
       "    \"subject\": {\n",
-      "        \"reference\": \"Patient/2609\"\n",
+      "        \"reference\": \"Patient/4408\"\n",
       "    },\n",
       "    \"resourceType\": \"Specimen\"\n",
       "}\n"
@@ -156,7 +196,7 @@
     }
    ],
    "source": [
-    "mySubject.reference = 'Patient/2609'\n",
+    "mySubject.reference = 'Patient/4408'\n",
     "mySpecimen.subject = mySubject\n",
     "import json\n",
     "print(json.dumps(mySpecimen.as_json(), indent=4))"
@@ -171,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -197,6 +237,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nothing is required\n"
+     ]
+    }
+   ],
+   "source": [
+    "whatsRequired(myCollection)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -205,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -226,15 +283,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nothing is required\n"
+     ]
+    }
+   ],
+   "source": [
+    "whatsRequired(myBodySite)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll use `coding` which is a type of `fhirclient.models.coding.Coding`. This is a `is_list` so it must be put into a list."
+    "We'll use `coding` which is a type of `fhirclient.models.coding.Coding`. This is a `is_list` so it must be put into a list. This makes sense because codeable concepts can have more than one coding. Here we'll create just one coding."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -258,15 +332,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nothing is required\n"
+     ]
+    }
+   ],
+   "source": [
+    "whatsRequired(myBodySiteCoding)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nothing is required. We'll add `system`, `code`, and `display`"
+    "Everything is optional. We'll add `system`, `code`, and `display` to `myBodySiteCoding`. Since `myBodySite` is a codeable concept, it can have multiple codings, so we'll put in a list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +380,7 @@
     "myBodySiteCoding.system = 'http://snomed.info/sct'\n",
     "myBodySiteCoding.code = '261063000'\n",
     "myBodySiteCoding.display = 'Buccal space'\n",
-    "myBodySite.coding = [myBodySiteCoding] # is_list for coding is True, so must be put into a list\n",
+    "myBodySite.coding = [myBodySiteCoding] # is_list for coding is True, so it must be put into a list\n",
     "print(json.dumps(myBodySite.as_json(), indent=4))"
    ]
   },
@@ -297,12 +388,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's repeat this for `method`, which is another `CodeableConcept`, to say it a swab."
+    "Let's repeat this for `method`, which is another `CodeableConcept`, to indicate it is a swab."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -310,9 +401,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"code\": \"SWA\",\n",
-      "    \"display\": \"Swab\",\n",
-      "    \"system\": \"http://hl7.org/fhir/v2/0488\"\n",
+      "    \"coding\": [\n",
+      "        {\n",
+      "            \"code\": \"SWA\",\n",
+      "            \"display\": \"Swab\",\n",
+      "            \"system\": \"http://hl7.org/fhir/v2/0488\"\n",
+      "        }\n",
+      "    ]\n",
       "}\n"
      ]
     }
@@ -324,7 +419,7 @@
     "myMethodCoding.code = 'SWA'\n",
     "myMethodCoding.display = 'Swab'\n",
     "myMethod.coding = [myMethodCoding] # is_list for coding is True, so must be put into a list\n",
-    "print(json.dumps(myMethodCoding.as_json(), indent=4))"
+    "print(json.dumps(myMethod.as_json(), indent=4))"
    ]
   },
   {
@@ -336,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +460,7 @@
       "        }\n",
       "    },\n",
       "    \"subject\": {\n",
-      "        \"reference\": \"Patient/2609\"\n",
+      "        \"reference\": \"Patient/4408\"\n",
       "    },\n",
       "    \"resourceType\": \"Specimen\"\n",
       "}\n"
@@ -383,12 +478,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's try posting it the FHIR server, using the same setting as we used in mkPatient"
+    "Now let's try posting it the FHIR server, using the same settings we used in makePatient.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -396,18 +491,35 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"resourceType\": \"OperationOutcome\",\n",
-      "    \"text\": {\n",
-      "        \"status\": \"generated\",\n",
-      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Specimen/2611/_history/1&quot; in 4ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
+      "    \"resourceType\": \"Specimen\",\n",
+      "    \"id\": \"4409\",\n",
+      "    \"meta\": {\n",
+      "        \"versionId\": \"1\",\n",
+      "        \"lastUpdated\": \"2019-01-23T04:00:01.820+00:00\"\n",
       "    },\n",
-      "    \"issue\": [\n",
-      "        {\n",
-      "            \"severity\": \"information\",\n",
-      "            \"code\": \"informational\",\n",
-      "            \"diagnostics\": \"Successfully created resource \\\"Specimen/2611/_history/1\\\" in 4ms\"\n",
+      "    \"subject\": {\n",
+      "        \"reference\": \"Patient/4408\"\n",
+      "    },\n",
+      "    \"collection\": {\n",
+      "        \"method\": {\n",
+      "            \"coding\": [\n",
+      "                {\n",
+      "                    \"system\": \"http://hl7.org/fhir/v2/0488\",\n",
+      "                    \"code\": \"SWA\",\n",
+      "                    \"display\": \"Swab\"\n",
+      "                }\n",
+      "            ]\n",
+      "        },\n",
+      "        \"bodySite\": {\n",
+      "            \"coding\": [\n",
+      "                {\n",
+      "                    \"system\": \"http://snomed.info/sct\",\n",
+      "                    \"code\": \"261063000\",\n",
+      "                    \"display\": \"Buccal space\"\n",
+      "                }\n",
+      "            ]\n",
       "        }\n",
-      "    ]\n",
+      "    }\n",
       "}\n"
      ]
     }
@@ -424,32 +536,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://fhirtest.b12x.org/baseDstu3/Specimen/2611/_history/1\n"
+      "http://fhirtest.b12x.org/r3/Specimen/4409/_history/1\n"
      ]
     }
    ],
    "source": [
     "print(response.headers['Location'])"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
