--- a/scratchpad.ipynb
+++ b/scratchpad.ipynb
@@ -1428,6 +1428,201 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1,2,3,4]\n",
+    "a,b=x[0:2]\n",
+    "a,b = x[0], x[1]\n",
+    "print(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('id', 'id', <class 'str'>, False, None, False)\n",
+      "('implicitRules', 'implicitRules', <class 'str'>, False, None, False)\n",
+      "('language', 'language', <class 'str'>, False, None, False)\n",
+      "('meta', 'meta', <class 'fhirclient.models.meta.Meta'>, False, None, False)\n",
+      "('contained', 'contained', <class 'fhirclient.models.resource.Resource'>, True, None, False)\n",
+      "('extension', 'extension', <class 'fhirclient.models.extension.Extension'>, True, None, False)\n",
+      "('modifierExtension', 'modifierExtension', <class 'fhirclient.models.extension.Extension'>, True, None, False)\n",
+      "('text', 'text', <class 'fhirclient.models.narrative.Narrative'>, False, None, False)\n",
+      "('active', 'active', <class 'bool'>, False, None, False)\n",
+      "('address', 'address', <class 'fhirclient.models.address.Address'>, True, None, False)\n",
+      "('animal', 'animal', <class 'fhirclient.models.patient.PatientAnimal'>, False, None, False)\n",
+      "('birthDate', 'birthDate', <class 'fhirclient.models.fhirdate.FHIRDate'>, False, None, False)\n",
+      "('communication', 'communication', <class 'fhirclient.models.patient.PatientCommunication'>, True, None, False)\n",
+      "('contact', 'contact', <class 'fhirclient.models.patient.PatientContact'>, True, None, False)\n",
+      "('deceasedBoolean', 'deceasedBoolean', <class 'bool'>, False, 'deceased', False)\n",
+      "('deceasedDateTime', 'deceasedDateTime', <class 'fhirclient.models.fhirdate.FHIRDate'>, False, 'deceased', False)\n",
+      "('gender', 'gender', <class 'str'>, False, None, False)\n",
+      "('generalPractitioner', 'generalPractitioner', <class 'fhirclient.models.fhirreference.FHIRReference'>, True, None, False)\n",
+      "('identifier', 'identifier', <class 'fhirclient.models.identifier.Identifier'>, True, None, False)\n",
+      "('link', 'link', <class 'fhirclient.models.patient.PatientLink'>, True, None, False)\n",
+      "('managingOrganization', 'managingOrganization', <class 'fhirclient.models.fhirreference.FHIRReference'>, False, None, False)\n",
+      "('maritalStatus', 'maritalStatus', <class 'fhirclient.models.codeableconcept.CodeableConcept'>, False, None, False)\n",
+      "('multipleBirthBoolean', 'multipleBirthBoolean', <class 'bool'>, False, 'multipleBirth', False)\n",
+      "('multipleBirthInteger', 'multipleBirthInteger', <class 'int'>, False, 'multipleBirth', False)\n",
+      "('name', 'name', <class 'fhirclient.models.humanname.HumanName'>, True, None, False)\n",
+      "('photo', 'photo', <class 'fhirclient.models.attachment.Attachment'>, True, None, False)\n",
+      "('telecom', 'telecom', <class 'fhirclient.models.contactpoint.ContactPoint'>, True, None, False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import fhirclient.models.patient as p\n",
+    "patient = p.Patient()\n",
+    "for i in patient.elementProperties():\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name =  name\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, jsname, typ, is_list, of_many, not_optional in patient.elementProperties()[-3:-2]:\n",
+    "    # print(\"name =\", name, \"type =\", typ, \"type(typ) =\", type(typ))\n",
+    "    print(\"name = \", name)\n",
+    "    i = typ()\n",
+    "    i.elementProperties()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"id\": \"123\",\n",
+      "    \"resourceType\": \"Patient\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "patient.id = \"123\"\n",
+    "print(json.dumps(patient.as_json(), indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import namedtuple\n",
+    "namedProperties = namedtuple(\"namedProperties\", [\"json_name\", \"type\", \"is_list\", \"of_many\", \"not_optional\"])\n",
+    "for i in patient.elementProperties():\n",
+    "    namedProperties = i[0](i[1:])\n",
+    "    print(named)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import namedtuple\n",
+    "Point = namedtuple('Point', 'x y')\n",
+    "pt1 = Point(1.0, 5.0)\n",
+    "pt2 = Point(2.5, 1.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pt1.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pt1[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [\"b\",\"c\",\"d\",\"e\",\"f\",\"g\"]\n",
+    "a[-3]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1450,7 +1645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
